--- a/.github/workflows/wakatime.yaml
+++ b/.github/workflows/wakatime.yaml
@@ -13,6 +13,6 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          TIME_RANG: last_30_days
+          TIME_RANGE: last_30_days
           COMMIT_MESSAGE: Update wakatime stats
           SHOW_TOTAL: true
